tests/should_succeed/implicit_conversions.jou
declare putchar(ch: int) -> int

# Return values
def foo1(x: byte) -> int:
    return x

# Function arguments
def foo2(x: byte) -> void:
    putchar(x)

# Local variables
def foo3(x: int) -> void:
    x = 'c'
    putchar(x)

# Local variables, with a given type
def foo4() -> void:
    x: int = 'd'
    putchar(x)

def main() -> int:
    # Output: abcd
    putchar(foo1('a'))
    foo2('b')
    foo3('x')
    foo4()
    putchar('\n')
    return 0
