tests/should_fail/bad_type.jou
def main() -> 'x':  # Error: expected a type, got an integer
    return
